--- a/app/index.html
+++ b/app/index.html
@@ -1,25 +1,25 @@
-  <!DOCTYPE html>
-  <html>
-    <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Meratech</title>
-      <meta name="description" content="">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Meratech</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      {{content-for 'head'}}
+    {{content-for "head"}}
 
-      <link rel="stylesheet" href="assets/vendor.css">
-      <link rel="stylesheet" href="assets/meratech.css">
+    <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
+    <link rel="stylesheet" href="{{rootURL}}assets/meratech.css">
 
-      {{content-for 'head-footer'}}
-    </head>
-    <body>
-      {{content-for 'body'}}
+    {{content-for "head-footer"}}
+  </head>
+  <body>
+    {{content-for "body"}}
 
-      <script src="assets/vendor.js"></script>
-      <script src="assets/meratech.js"></script>
+    <script src="{{rootURL}}assets/vendor.js"></script>
+    <script src="{{rootURL}}assets/meratech.js"></script>
 
-      {{content-for 'body-footer'}}
-    </body>
-  </html>
+    {{content-for "body-footer"}}
+  </body>
+</html>
